--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.curv]
-git = "https://github.com/KZen-networks/curv"
-tag = "v0.2.3"
+git = "https://github.com/survived/curv"
+branch = "expose-testing-macro"
 
 [dev-dependencies]
 bencher = "0.1"
